--- a/Ex8/homepage.html
+++ b/Ex8/homepage.html
@@ -28,7 +28,8 @@
             <div class="container">
                 <span class="navbar-text">Chào mừng bạn đến với dreamer</span>
                 <div class="half-header">
-                    <a href="./sign_up.html" class="not-active"><i class="fa fa-upload" aria-hidden="true"></i> Đăng kí</a>
+                    <a href="./sign_up.html" class="not-active"><i class="fa fa-upload" aria-hidden="true"></i> Đăng
+                        kí</a>
                     <a href="#" class="not-active"><i class="fa fa-unlock" aria-hidden="true"></i> Đăng nhập</a>
                     <a href="#" class="not-active"><i class="fa fa-question-circle" aria-hidden="true"></i> Hỗ trợ</a>
                 </div>
@@ -121,10 +122,20 @@
     </div>
     <!-- News and events -->
     <div class="news-events">
-        <div class="container">
+        <div id="news-events" class="container">
             <h1 class="h1">Tin tức & sự kiện</h1>
             <div class="card-group">
-                <img src="./img/ảnh/1/12.jpg" style="width: 30rem;">
+                <div class="big-new">
+                    <img src="./img/ảnh/1/12.jpg" class="news-home-content-img" style="width: 35rem;">
+                    <div class="new-big-news">
+                        <div class="news_home_content_short_time"><small style="display:block"><i class="fa fa-clock-o"
+                                    aria-hidden="true"></i>
+                                22/03/2017
+                                9:00</small></div>
+                        <div class="news_home_content_short_info"><a href="/khu-phuc-hop-ascott-waterfront-saigon" class="white-btn">Dự án
+                                khu phức hợp sang trọng tiện nghi Ascott Waterfront Saigon TP Hồ Chí Minh</a></div>
+                    </div>
+                </div>
 
                 <div id="card-event-1" class="card-event card">
                     <img src="./img/ảnh/1/5.jpg" class="card-img-top" alt="biet thu">
@@ -171,8 +182,8 @@
                         </div>
                         <div class="about_video_content">
                             <figure class="about_video_content_img">
-                                <a href="#"  class="not-active">
-                                   <img src="./img/ảnh/1/6.jpg" alt="hop tac" style="width:100%">
+                                <a href="#" class="not-active">
+                                    <img src="./img/ảnh/1/6.jpg" alt="hop tac" style="width:100%">
                                 </a>
                             </figure>
                             <div class="about_video_content_short">
@@ -195,11 +206,15 @@
                             </figure>
                             <div class="about_video_content_short">
                                 <ul>
-                                    <li><a href="#" class="not-active"><i class="fa fa-forumbee" aria-hidden="true"></i> Văn hóa doanh
+                                    <li><a href="#" class="not-active"><i class="fa fa-forumbee" aria-hidden="true"></i>
+                                            Văn hóa doanh
                                             nghiệp quy hoạch</a></li>
-                                    <li><a href="#" class="not-active"><i class="fa fa-bullhorn" aria-hidden="true"></i> Chiến lược phát triển kinh doanh</a></li>
-                                    <li><a href="#" class="not-active"><i class="fa fa-user" aria-hidden="true"></i> Chiến lược đào tạo con người</a></li>
-                                    <li><a href="#" class="not-active"><i class="fa fa-spinner" aria-hidden="true"></i> Môi trường &amp; Xã hội, phương án giải quyết</a></li>
+                                    <li><a href="#" class="not-active"><i class="fa fa-bullhorn" aria-hidden="true"></i>
+                                            Chiến lược phát triển kinh doanh</a></li>
+                                    <li><a href="#" class="not-active"><i class="fa fa-user" aria-hidden="true"></i>
+                                            Chiến lược đào tạo con người</a></li>
+                                    <li><a href="#" class="not-active"><i class="fa fa-spinner" aria-hidden="true"></i>
+                                            Môi trường &amp; Xã hội, phương án giải quyết</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -224,9 +239,11 @@
                                 <ul>
                                     <li><span class="about_video_content_text">Xem &amp; download thư viện hình ảnh,
                                             video clip, ấn phẩm tiêu biểu của tập đoàn</span></li>
-                                    <li><a href="#" class="not-active"><i class="fa fa-camera" aria-hidden="true"></i> Tham quan văn phòng
+                                    <li><a href="#" class="not-active"><i class="fa fa-camera" aria-hidden="true"></i>
+                                            Tham quan văn phòng
                                             của Dreamer</a></li>
-                                    <li><a href="#" class="not-active"><i class="fa fa-play-circle-o" aria-hidden="true"></i> Video giới
+                                    <li><a href="#" class="not-active"><i class="fa fa-play-circle-o"
+                                                aria-hidden="true"></i> Video giới
                                             thiệu &amp; sản phẩm, dự án</a></li>
                                 </ul>
                             </div>
