--- a/Ex8/sign_up.html
+++ b/Ex8/sign_up.html
@@ -67,7 +67,54 @@
 
         </div>
     </div>
-    <!-- under world space -->
+    <!-- sign up form -->
+    <div class="container">
+        <div class="half-a4" style="padding-left: 15px;">
+            <h1 class="h1">Đăng kí</h1>
+            <p class="description" style="width: 50%;">Quý khách vui lòng điền chính xác các thông tin dưới đây để đảm
+                bảo nhận đầy đủ mọi quyền
+                lợi, thông tin ưu đẫi dành riêng cho các Khách hàng</p>
+            <!-- account -->
+            <div id="input-group-1" class="input-group mb-3">
+                <input class="form-control" type="text" placeholder="Email">
+                <input class="form-control" type="text" placeholder="Số điện thoại">
+                <input class="form-control" type="text" placeholder="Mật khẩu">
+                <input class="form-control" type="text" placeholder="Nhập lại mật khẩu">
+            </div>
+            <h2 class="h2">Thông tin cá nhân</h2>
+            <div id="input-group-1" class="input-group mb-3">
+                <input class="form-control" type="text" placeholder="Email">
+                <div class="sex">
+                    <p class="col-form-label">Giới tính</p>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                            value="option1">
+                        <label class="form-check-label" for="inlineRadio1">Nam</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                            value="option2">
+                        <label class="form-check-label" for="inlineRadio2">Nữ</label>
+                    </div>
+                </div>
+                <input class="form-control" type="text" placeholder="Địa chỉ">
+                <input class="form-control" type="text" placeholder="Số CMND">
+
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                        value="option1">
+                    <label class="form-check-label" for="inlineRadio1">Tôi đã đọc và đồng ý với điều khoản và Điều
+                        kiện sử dụng</label>
+                </div>
+
+                <div class="btn-login">
+                    <button type="button" class="btn btn-danger">Đăng kí</button>
+                    <p> Nếu đã có tài khoản, đăng nhập <a href="#">tại đây</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- under work space -->
     <div class="under-world-space">
         <div id="container-2" class="container">
             <div class="half-community-tab">
