--- a/Ex8/homepage.html
+++ b/Ex8/homepage.html
@@ -231,8 +231,8 @@
                                 </a>
                                 <img src="./img/ảnh/1/4.jpg" alt="hop tac" style="width:100%">
 
-                                <h2><a class="fancybox_video fancybox.iframe"
-                                        href="https://www.youtube.com/embed/V7YbJHSLAmE"></a></h2>
+                                <!-- <h2><a class="fancybox_video fancybox.iframe"
+                                        href="https://www.youtube.com/embed/V7YbJHSLAmE"></a></h2> -->
                             </figure>
 
                             <div class="about_video_content_short">
